# SnapMdiArea

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: CMakeLists.txt  SnapMdiArea_global.h  elidedlabel.cpp  elidedlabel.h  overlaywidget.cpp  overlaywidget.h  snapmdiarea.cpp  snapmdiarea.h  windowselector.cpp  windowselector.h  windowwidget.cpp  windowwidget.h
